Removed a TBD.  Added note to Line Breaking section.

--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
       </section>
       <section id="ethiopic_line_breaking">
      	 <h3>Line Breaking</h3>
+     	 <p><em>Are western rules ok for Modern Ethiopic? Cover breaking rules with Ethiopic Wordspace in Classical Ethiopic</em></p>
       </section>
       <section id="ethiopic_line_breaking">
       	<h3>Formatting of Ethiopic Wordspace</h3>
@@ -577,12 +578,11 @@ The shape and weight of these symbols are often changed for a better visual fit 
           <img src="images/diamond-bullet-size-samples.png" border="1"/>
           <figcaption>Diamond bullet size relative to letter height.</figcaption>
         </figure>
-        </p>     	
-    	<p><em>TBD: Expand the size comparisons: 60% 70% 80%. Produce samples with comparative distance of bullets from letters</em></p>
-		<p><em>Issues:</em>
+        </p>	
+    		<p><em>Issues:</em>
 		<ol><em>
 		  <li>What are the preferred bullet shapes?</li>
-		  <li>What are the preferred shape sequences in nested lists?</li>
+		  <li>What are the preferred shape sequences in nested lists (e.g. bullet hierarchy)?</li>
 		  <li>What is bullet height and width relative to letter dimensions?</li>
 		  <li>What is the default distance of the list item text from the bullet?</li>
 		  <li>Are lists indented (left  margin)? If so, how much?</li>
@@ -958,7 +958,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
         The ordering is used today largely for pedagogical purposes and has been used by some authors for the collation of
         entire works such as dictionaries. More often authors will apply the ordering for list orders.</p>
     	<p>The አበገደ ordering is potentially desirable to any language using the Ethiopic syllabary.
-    	The ordering is less likely to be found in the writing traditions of languages that have a written tradition of under a hundred years.
+    	The ordering is less likely to be found in the writing practices of languages that have a written tradition of under a hundred years.
     	The language specific orders orders shown here are only those found utlized in corpus.</p>
     	
 
