--- a/index.html
+++ b/index.html
@@ -1213,6 +1213,10 @@ The shape and weight of these symbols are often changed for a better visual fit 
 <section id="h_pages">
   <h2>Pages</h2>
     <p><em>Discuss: Basic common templates, Page elements, Page-level directionality, Bidirectional characteristics, Arrangement of elements, Text columns, Header, Footer, Illustrations, Tables, Page numbers, Margins, Positioning and arrangement of content, Pagination rules, Specimens and examples.</em></p>
+    <p><em>Page and section numbering can be discussed here.  The user (author) should be to set the numeral system with a CSS attribute. A tool tip to 
+           over an ethiopic page number that presents the western equivalent would be useful.  Are there any rules on page number position?</em></p>
+    <p><em>Page margin differences?  A special case: many religious books have an extra large lower margin to make it easier to hold the book with two hands
+           while not obscuring the text</em></p>
 </section>
     
     
