Commented out some list items that were not rules in the Wordspace to Space conversion rules section.

--- a/index.html
+++ b/index.html
@@ -344,11 +344,12 @@ The shape and weight of these symbols are often changed for a better visual fit 
           <li>A sequence of exactly two worspaces is converted to an ETHIOPIC FULLSTOP (U+1362).</li>
           <li>A sequence of exactly one wordspace is convert to space.</li>
           <li>A wordspace at the end of a line may be removed.</li>
-        </ol>
-        <ol>
+<!--
+  general wordspace rules for consideration, or not, review later:
           <li>A wordspace may not start a line.</li>
           <li>A wordpsace may not start a sentence.</li>
           <li>Wordspace follows letters and numbers only. Conversly: a wordspace may not follow another punctuation or spacing symbol.</li>
+-->
         </ol>
         <p>An additional wordspace conversion rule that is independent of the above space-wordspace substitution rules: Very commonly in Ethiopic documents
            a  sequence of two worspaces are found and may be substituted for ethiopic fullstop. This may be considered a defect correction rule.</p>
