Adding issue topic to ask if "word bounded" is a better term than "left bounded".

--- a/index.html
+++ b/index.html
@@ -517,6 +517,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
       <p><em>Issues:
       <ol>
         <li>Which spacing style should be the default used by applications?</li>
+        <li>Is "word bounded" a better (more descriptive) term than "left bounded"?</li>
       </ol>
       </em></p>
     </section>
