Addition of two more emphasis issues.

--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
 
     <section id="heading_emphasis">
       <h3>Section Headings</h3>
-      <p>Bold, Size, (no underline or typeface change)</p>
+      <p>Bold with standard sizes, (no underline or typeface change)</p>
      <pre>
 TBD:
 
@@ -1246,12 +1246,23 @@ Heading 6
 1.1.1.1.1 Heading 5
 1.1.1.1.1.1 Heading 6
      </pre>
+      <p><em>Issues:
+      <ol>
+        <li>What percentage bold?</li>
+      </ol>
+      </em></p>
    </section>
 
 
     <section id="emphasis_within_prose">
       <h3>Emphasis Within Prose</h3>
       <p>Within a paragraph, a reference to a book title, or section title is given in italic.</p>
+      <p>[Examples Needed]</p>
+      <p><em>Issues:
+      <ol>
+        <li>How much slant when an italic designed typeface is not available? 10% is suggested.</li>
+      </ol>
+      </em></p>
    </section>
 
     <section id="lists_and_counters">
