Changes "Preface Pages" to "Preface Page Numbering".

--- a/index.html
+++ b/index.html
@@ -1327,8 +1327,8 @@ The shape and weight of these symbols are often changed for a better visual fit 
     <p><em>Page margin differences?  A special case: many religious books have an extra large lower margin to make it easier to hold the book with two hands
            while not obscuring the text</em></p>
 
-<section id="h_preface_pages">
-  <h3>Preface Pages</h3>
+<section id="h_preface_page_numbering">
+  <h3>Preface Page Numbering</h3>
     <p><em>Note the practice of using two numeral systems for page numbering in books.  For example in preface paging Ethiopic numerals may be used in documents where page numbers use western numerals.  This is analagous to the practice in western literature of using Roman numerals in preface numbering and western numerals afterwards. A general statement should be made in this document that Ethiopic Numerals should Replace Roman Numerals where the later is a default.</em></p>
 </section>
 </section>
