Adding image for Sebatbeit glpyh preferences and update to the corresponding section.

--- a/index.html
+++ b/index.html
@@ -1481,9 +1481,16 @@ The shape and weight of these symbols are often changed for a better visual fit 
         </p> 
       </section>
 
-    <section id="wordspace_in_comma_context">
+    <section id="sebatbeit_glyph_preferences">
       <h3>Sebatbeit Glyph Preferences</h3>
-      <p>TBD</p>
+      <p>The Sebatbeit (aka Sebat Bet) language features a greater number and frequency of labiovelarized letter forms in comparison to the larger
+         language communities utilizing Ethiopic script.  In Sebatbeit publishing a number of modifications to diacritical marks are regularly
+         applied to aid glyph clarity.  These modified glyphs will sometimes appear within in font as a <em>Stylistic Alternative</em> or an
+         entirely separate font may be used in publishing where these letter shapes appear as the default forms.  The glyphs are enumerated here and
+         are recommended for Sebatbeit liteature.</p>
+      <figure id="sebatbeit_glyph_preferences_sample"> <img src="images/Sebatbeit-Glyph-Preferences.png" alt=" " height="479" width="283" border="1" />
+        <figcaption>Labiovelar leter shape preferences for Sebatbeit (Sebat Bet) literature.</figcaption>
+      </figure>
       </section>
 </section>
 
