Update for ecclesiastical emphasis sample.

--- a/index.html
+++ b/index.html
@@ -1307,7 +1307,9 @@ The shape and weight of these symbols are often changed for a better visual fit 
     <section id="lists_and_counters">
       <h3>Ecclesiastical Emphasis</h3>
       <p>Context dependent.  A word red in one sentence may not be red in the next.</p>
-      <p>[Examples Needed, show color interlacing of letters within a word]</p>
+      <figure id="ecclesiastical_emphasis_sample"> <img src="images/ecclesiastical-emphasis-sample-cropped.jpg" alt=" " width="600" border="1"/>
+        <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser'ate Kiddase Betegreññā, Page 32 (Weldemariam, 1995 (1988 EC))</figcaption>
+      </figure>
       <p><em>Issues:
       <ol>
         <li>What shade of red?</li>
@@ -1413,7 +1415,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
       	  </dd>
       	  <dt>፡ - ንዑስ ነጥብ</dt>
       	  <dd>ETHIOPIC WORDSPACE (አማ/ ሁለት ነጥብ, ትግ/ ክልተ ነጥቢ) in keeping with Ge'ez heritage, is used as the word separator (i.e. space) in the classical writing practices
-      	      of both Eritrean and Ethiopia.  In modern Eritrean writing practices ETHIOPIC WORDSPACE will be used in the role of a comma.
+      	      of both Eritrean and Ethiopia.  In modern Eritrean writing practices ETHIOPIC WORDSPACE will be used in the role of a comma (illustrated in Figure <a href="ecclesiastical_emphasis_sample"></a>).
       	      When used in modern Ethiopian writing, it retains its classic role as word separator (space).
               See <a href="#wordspace_in_comma_context">Ethiopic Wordspace in the Context of Comma</a> for elaboration on this topic.
       	  </dd>
