Explanatory text added to the Ecclesiastical emphasis section.

--- a/index.html
+++ b/index.html
@@ -224,14 +224,14 @@ and in some cases limitations imposed by desktop publishing software designed fo
     <section id="ethiopicized_punctuation">
         <h4>Ethiopicized Punctuation</h4>
         <p>Modern Ethiopic borrows a number of foreign symbols to denote currency, express emphasis, time, mathematics, or communicate with
-        Interenet protocols (e.g. "@" , "://").  
+        Interenet protocols (e.g. "@" , "://"). 
     	The ES-781:2002 standard identifies the following inventory of western symbols to be used with Ethiopic:</p>
     	<p style="margin-left: 20px"><code>1234567890 ? ! ¡ . / () [] {} &lt; = &gt; \ # % &amp; _ - + ± × ÷ ‘ ’  “ ” ‹ › « »</code></p>
     	<p>Additionally the following punctuation is observed to be used with Ethiopic writing:</p>
     	<p style="margin-left: 20px"><code>$ : , € @ …</code></p>
 
 
-The shape and weight of these symbols are often changed for a better visual fit with an accompanying
+        <p>The shape and weight of these symbols are often changed for a better visual fit with an accompanying
         Ethiopic typeface. Enhanced foreign symbols are referred to here as "Ethiopicized". While many symbols are borrowed from western writing,
         not all necessarily benefit from Ethiopicization.  Those that do will primarily be used in a context where the foreign symbol directly
         abuts some Ethiopic symbol. Commonly Ethiopic symbols are demonstrated in the following figure:</p>
@@ -1306,7 +1306,7 @@ The shape and weight of these symbols are often changed for a better visual fit 
 
     <section id="lists_and_counters">
       <h3>Ecclesiastical Emphasis</h3>
-      <p>Context dependent.  A word red in one sentence may not be red in the next.</p>
+      <p>In religous literature, certain words or phrases with a spiritual or more holy aspect may be colored in red.  The practice is context dependent and a word that will appear in red in one sentence may not be red in the next (or elsewhere in the same sentence).</p>
       <figure id="ecclesiastical_emphasis_sample"> <img src="images/ecclesiastical-emphasis-sample-cropped.jpg" alt=" " width="600" border="1"/>
         <figcaption>Ecclesiastical emphasis sample from Maṣḥafa Ṣalot Mes Ser'ate Kiddase Betegreññā, Page 32 (Weldemariam, 1995 (1988 EC))</figcaption>
       </figure>
