Fix for missing "#" in a local link.

--- a/index.html
+++ b/index.html
@@ -1415,7 +1415,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
       	  </dd>
       	  <dt>፡ - ንዑስ ነጥብ</dt>
       	  <dd>ETHIOPIC WORDSPACE (አማ/ ሁለት ነጥብ, ትግ/ ክልተ ነጥቢ) in keeping with Ge'ez heritage, is used as the word separator (i.e. space) in the classical writing practices
-      	      of both Eritrean and Ethiopia.  In modern Eritrean writing practices ETHIOPIC WORDSPACE will be used in the role of a comma (illustrated in Figure <a href="ecclesiastical_emphasis_sample"></a>).
+      	      of both Eritrean and Ethiopia.  In modern Eritrean writing practices ETHIOPIC WORDSPACE will be used in the role of a comma (illustrated in Figure <a href="#ecclesiastical_emphasis_sample"></a>).
       	      When used in modern Ethiopian writing, it retains its classic role as word separator (space).
               See <a href="#wordspace_in_comma_context">Ethiopic Wordspace in the Context of Comma</a> for elaboration on this topic.
       	  </dd>
