Fixes to glossary links.

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <p>Growing out of the 182 element Ge'ez language syllabary for two millenia, Ethiopic in its present day form is a multilingual, and multinational, script comprised by 494 symbols representing: syllables, numerals, punctuation and tonal marks.  Numerous linguistic, cultural, literary, historical and political issues surround the script and its utilization -all of which the authors strive to avoid discussing unless directly relevant to clarifying a given layout use case. The following principles are applied in the development of this document:</p>
       <ol>
         <li>View publishers as the primary stakeholders.</li>
-        <li>Attempt a “90% solution” where the common and primary needs of publishers are addressed. Important but less widely used practices such as for <a href="#term.yared-zaima" class="termref">Yaredic Zaima Notation</a> will be addressed at a future time.</li> 
+        <li>Attempt a “90% solution” where the common and primary needs of publishers are addressed. Important but less widely used practices such as for <a href="#term.yaredic-zaima-notation" class="termref">Yaredic Zaima Notation</a> will be addressed at a future time.</li> 
         <li>It does not cover every issue of Ethiopic typography, but only the import differences from the Western language systems.</li>
         <li>The technical aspects of actual implementation are not covered by this document.</li>
         <li>In order to help readers' understanding of how Ethiopic is used, typical real life examples are provided.</li>
@@ -109,7 +109,7 @@
       </section>
       <section id="ethiopic_eras">
       <h3>In-Scope Publishing Eras</h3>
-      <p>While Ethiopic documents can be characterized under a number of time periods, we discern only two gross eras in this document. <a href="#term.classical-ethiopic" class="termref">Classical Ethiopic</a> encompases the layout requirements found in the documents of the first printing presses and coming into fruition under the reign of Emperor Haile Selassie.  While not the focus of this document, "Classical Ethiopic" also encompasses handwritten manuscripts whose practices are present in early publishing. This era is characterized more by the influences of the Ge'ez tradition as embodied by the Ethiopian Orthodox Church with respect to spelling conventions, syntax and punctuation use, Ethiopic Wordspace and numeral system preference. Also featuring less variation in layout practice which is likely the result of having fewer publishing houses in operation.</p>
+      <p>While Ethiopic documents can be characterized under a number of time periods, we discern only two gross eras in this document. <a href="#term.classical-ethiopic" class="termref">Classical Ethiopic</a> encompases the layout requirements found in the documents of the first printing presses and coming into fruition under the reign of Emperor Haile Selassie.  While not the focus of this document, "Classical Ethiopic" also encompasses handwritten manuscripts whose practices are present in early publishing. This era is characterized more by the influences of the Ge'ez tradition as embodied by the Ethiopian Orthodox Church with respect to spelling conventions, syntax and punctuation use, <a href="#term.wordspace" class="termref">Ethiopic Wordspace</a> and numeral system preference. Also featuring less variation in layout practice which is likely the result of having fewer publishing houses in operation.</p>
 
       <p>The Classical Ethiopic era is followed by  <a href="#term.modern-ethiopic" class="termref">Modern Ethiopic</a> spanning from the post-Imperial period up until the present day. Modern Ethiopic practices are characterized by looser spelling conventions, the preference change toward whitespace and western numerals, more variation in layout styles  
 and in some cases limitations imposed by desktop publishing software designed for Western markets.</p>
@@ -1506,17 +1506,11 @@ and in some cases limitations imposed by desktop publishing software designed fo
       </tr>
     </thead>
     <tbody>
-      <tr id="def_geez">
+      <tr id="term.geez">
         <td>Ge'ez</td>
         <td lang="am">TBD</td>
         <td lang="ti">TBD</td>
         <td>The part of the page normally occupied by text.</td>
-      </tr>
-      <tr id="def_wordspace">
-        <td>wordspace</td>
-        <td lang="am">TBD</td>
-        <td lang="ti">TBD</td>
-        <td>TBD</td>
       </tr>
       <tr id="def_text_block">
         <td>text block</td>
@@ -1536,19 +1530,25 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td lang="ti">TBD</td>
         <td>The standard length of the line; ie. column width or width of the overall textblock.</td>
       </tr>
-      <tr id="def_classical_ethiopic">
+      <tr id="term.classical-ethiopic">
         <td>Classical Ethiopic</td>
         <td lang="am">TBD</td>
         <td lang="ti">TBD</td>
         <td>TBD</td>
       </tr>
-      <tr id="def_modern_ethiopic">
+      <tr id="term.modern-ethiopic">
         <td>Modern Ethiopic</td>
         <td lang="am">TBD</td>
         <td lang="ti">TBD</td>
         <td>TBD</td>
       </tr>
-      <tr id="def_yaredic_zaima_notation">
+      <tr id="term.wordspace">
+        <td>wordspace</td>
+        <td lang="am">TBD</td>
+        <td lang="ti">TBD</td>
+        <td>TBD</td>
+      </tr>
+      <tr id="term.yaredic-zaima-notation">
         <td>Yaredic Zaima Notation</td>
         <td lang="am">TBD</td>
         <td lang="ti">TBD</td>
