Glossary entry added for "Ethiopicized".

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ and in some cases limitations imposed by desktop publishing software designed fo
 
 
         <p>The shape and weight of these symbols are often changed for a better visual fit with an accompanying
-        Ethiopic typeface. Enhanced foreign symbols are referred to here as "Ethiopicized". While many symbols are borrowed from western writing,
+        Ethiopic typeface. Enhanced foreign symbols are referred to here as <a href="#term.ethiopicized" class="termref">"Ethiopicized"</a>. While many symbols are borrowed from western writing,
         not all necessarily benefit from Ethiopicization.  Those that do will primarily be used in a context where the foreign symbol directly
         abuts some Ethiopic symbol. Commonly Ethiopic symbols are demonstrated in the following figure:</p>
 
@@ -1529,6 +1529,12 @@ and in some cases limitations imposed by desktop publishing software designed fo
         <td lang="am">TBD</td>
         <td lang="ti">TBD</td>
         <td>The standard length of the line; ie. column width or width of the overall textblock.</td>
+      </tr>
+      <tr id="term.ethiopicized">
+        <td>Ethiopicized</td>
+        <td lang="am">TBD</td>
+        <td lang="ti">TBD</td>
+        <td lang="ti">TBD</td>
       </tr>
       <tr id="term.classical-ethiopic">
         <td>Classical Ethiopic</td>
