Adding section on vertical numeral alignment.

--- a/index.html
+++ b/index.html
@@ -396,6 +396,25 @@ and in some cases limitations imposed by desktop publishing software designed fo
 	  </p>
     </section>
 
+    <section id="ethiopic_numeral_vertical_alignment">
+    	<h4>Ethiopic Numeral Vertical Alignment</h4>
+        <p>In the Ethiopic numeral system a single symbol may represent a numeral with an order of magnitude in the power of 0, 1, 2 or 4.
+           This feature of the numeral system leads to several potential layout possibilities when numerals are arranged vertically.</p>
+
+        <figure>
+          <img src="images/numeral-vertical-alignment.png" alt=" " border="1" />
+          <figcaption>Three vertical alignments compared.</figcaption>
+        </figure>
+        <p><em>Issues:</em>
+           <ol><em>
+             <li>Are the vertical alignment rules of Roman or Coptic numerals appropriate (and what are they)?</li>
+             <li>In what layout context is right jufication appropriate?</li>
+             <li>In what layout context is decimal place jufication appropriate?</li>
+             <li>In what layout context is left jufication appropriate?</li>
+           </em></ol>
+        </p>
+    </section>
+
     </section>
 </section>
     
